# safetyMaster

./: .dockerignore  .gitignore  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  Dockerfile  MAC_APP_FIX_NOTES.md  MAC_COMPATIBILITY_GUIDE.md  MAC_SETUP_GUIDE.md  MANIFEST.in  RAILWAY_CLI_DEPLOY.md  RAILWAY_DEPLOY_GUIDE.md  README.md  USER_FRIENDLY_APP_IMPROVEMENTS.md  build_executable.py  create_improved_mac_app.py  create_mac_app.py  create_package.py  create_user_friendly_mac_app.py  deploy.sh  deploy_cli_clean.sh  deploy_web.sh  docker-compose.yml  manual_deploy_commands.txt  netlify-static-version.md  pyproject.toml  railway-deploy.md  railway.json  render-deploy.md  setup.py  start_safety_monitor.sh  test_camera.py  test_mask_detection.py  test_ppe_detector.py  web_interface.py
SafetyMasterPro_v1.0_20250614_174423/: README.md  START_SafetyMaster.bat  START_SafetyMaster_Mac.command  USER_GUIDE.md  camera_manager.py  config.py  demo.py  safety_detector.py  web_interface.py
SafetyMasterPro_v1.0_20250614_174423 2/: START_SafetyMaster.sh  demo_simple.py  high_fps_test.py  test_improved_detection.py  test_websocket.html
violation_captures/: violation_20250614_161834_855_metadata.json  violation_20250614_161834_933_metadata.json  violation_20250614_161835_034_metadata.json  violation_20250614_161835_190_metadata.json  violation_20250614_161835_327_metadata.json  violation_20250614_161835_407_metadata.json  violation_20250614_161835_485_metadata.json  violation_20250614_161835_565_metadata.json  violation_20250614_161835_646_metadata.json  violation_20250614_161835_769_metadata.json  violation_20250614_161835_868_metadata.json  violation_20250614_161835_967_metadata.json  violation_20250614_161836_077_metadata.json  violation_20250614_161836_169_metadata.json  violation_20250614_161836_254_metadata.json  violation_20250614_161836_335_metadata.json  violation_20250614_161836_444_metadata.json  violation_20250614_161836_514_metadata.json  violation_20250614_161836_594_metadata.json  violation_20250614_161836_668_metadata.json  violation_20250614_161836_744_metadata.json  violation_20250614_161836_818_metadata.json  violation_20250614_161836_894_metadata.json  violation_20250614_161836_968_metadata.json  (+5080 more)
(+7 files in other folders)
