[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "safetymaster-pro"
version = "1.0.0"
description = "Real-time AI-powered safety equipment detection system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SafetyMaster Team", email = "support@safetymaster.pro"}
]
maintainers = [
    {name = "SafetyMaster Team", email = "support@safetymaster.pro"}
]
keywords = ["safety", "ai", "computer-vision", "ppe", "detection", "yolo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "ultralytics>=8.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.21.0",
    "flask>=2.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "requests>=2.25.0",
    "pillow>=8.0.0",
    "python-engineio>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910"
]
gpu = [
    "torch>=1.9.0+cu111",
    "torchvision>=0.10.0+cu111"
]

[project.scripts]
safetymaster = "web_interface:main"
safetymaster-test = "high_fps_test:test_high_fps"

[project.urls]
Homepage = "https://github.com/safetymaster/safetymaster-pro"
Documentation = "https://github.com/safetymaster/safetymaster-pro/wiki"
Repository = "https://github.com/safetymaster/safetymaster-pro.git"
"Bug Tracker" = "https://github.com/safetymaster/safetymaster-pro/issues"

[tool.setuptools]
packages = ["safetymaster"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pt", "*.html", "*.css", "*.js", "*.md"] 